package com.xinqihd.sns.gameserver.proto;
//
option java_outer_classname = "XinqiBceRoomUserList"; 
message BceRoomUserList {
}
