package com.xinqihd.sns.gameserver.proto;
//
option java_outer_classname = "XinqiBseRoomUserList"; 
message BseRoomUserList {
    /**
	   //PVE game room, up to 4 users.
	   PVE_ROOM,
	   //Single player mode.
	   SINGLE_ROOM,
	   //Multi users mode
	   MULTI_ROOM,
	   //Friend combat mode
	   FRIEND_ROOM,
	   //On-machine mode.
	   DESK_ROOM,
	   //Training room.
	   TRAINING_ROOM,
	   //Challenge roo,
	   CHALLENGE_ROOM,
	   //Rank competing room
	   RANK_ROOM,
	   //Guild room.
	   GUILD_ROOM,
     */
    repeated int32 roomTypeId = 1;       //邀请对象的UID
    repeated int32 roomUsers = 2;        //房间当前的人数
    repeated int32 roomMaxUsers = 3;     //房间历史最大人数
}
